# AscNHalf

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  GIT_USAGE  INSTALL  Makefile.am  README.md  ascentcheck.sh  ascnhalf.cproj  ascnhalf.sln  ascnhalf.userprefs  build.sh  build_travis.sh  configure.ac  extract_git_hash.sh  extract_svn_revision.sh  precompile.sh  summit.kdevelop  svn_revision_extractor.sh  tags
src/: CMakeLists.txt  Makefile.am  ascnhalf-logonserver.conf  ascnhalf-realms.conf  ascnhalf-realmserver.conf  ascnhalf-world.conf
src/ascnhalf-dev/: CMakeLists.txt
src/ascnhalf-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  CMakeLists.txt  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h
src/ascnhalf-realmserver/: Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  ClientManager.cpp  ClientManager.h  ClusterManager.cpp  ClusterManager.h  ClusterServerDefines.h  ConsoleCommands.cpp  ConsoleCommands.h  ConsoleListener.cpp  LocalizationMgr.cpp  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Main.cpp  Makefile.am  Master.cpp  Master.h  ObjectStorage.cpp  ObjectStorage.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerOpcodes.h  WorkerServer.cpp  WorkerServer.h  WorkerServerSocket.cpp  WorkerServerSocket.h  WorldSocket.cpp  WorldSocket.h  (+1 more)
src/ascnhalf-scripts/Sql/: ascnhalf_sunplusplus_full.sql
src/ascnhalf-scripts/Sql/Updates/: Dalaran_npc_text.sql
src/ascnhalf-scripts/projects/: EventScripts.vcproj  ExtraScripts.vcproj  GossipScripts.vcproj  InstanceScripts.vcproj  MiscScripts.vcproj  QuestScripts.vcproj  ServerStatusPlugin.vcproj  SpellsHandlers.vcproj  WorldPvPScripts.vcproj
src/ascnhalf-scripts/src/: CMakeLists.txt  Makefile.am
src/ascnhalf-scripts/src/Common/: Base.cpp  Base.h  EasyFunctions.h  Instance_Base.cpp  Instance_Base.h
src/ascnhalf-scripts/src/EventScripts/: Event_DarkPortal.cpp  Event_DarkPortal.h  Halloween.cpp  Makefile.am  Setup.cpp  Setup.h  WinterVeil.cpp
src/ascnhalf-scripts/src/ExtraScripts/: Makefile.am  NeutralGuards.cpp  Setup.cpp  Setup.h
src/ascnhalf-scripts/src/GossipScripts/: Gossip_Battlemaster.cpp  Gossip_BoreanTundra.cpp  Gossip_DarkmoonFaire.cpp  Gossip_Innkeepers.cpp  Gossip_Moonglade.cpp  Gossip_Mulgore.cpp  Gossip_Shattrath.cpp  Gossip_Stormwind.cpp  Gossip_Tanaris.cpp  (+8 more)
src/ascnhalf-shared/: AuthCodes.h  BufferPool.cpp  BufferPool.h  ByteBuffer.h  CMakeLists.txt  CallBack.cpp  CallBack.h  CircularQueue.h  Common.h  CoreMemoryAllocator.cpp  CoreMemoryAllocator_Core.cpp  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  LocationVector.h  Log.cpp  Log.h  Makefile  Makefile.am  Makefile.in  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  New-Bytebuffer.h  PacketLog.cpp  PacketLog.h  PreallocatedQueue.h  RC4Engine.h  SharedPtr.h  Singleton.h  SmartPointer.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  Timer.h  Util.cpp  (+9 more)
src/ascnhalf-shared/Auth/: BigNumber.cpp  BigNumber.h  HMAC.cpp  HMAC.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/ascnhalf-shared/Collision/: Interface.cpp  LocationVector.h
src/ascnhalf-shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/ascnhalf-shared/Console/: BaseConsole.h  CConsole.cpp  CConsole.h  ConsoleListener.cpp
src/ascnhalf-shared/Database/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h  dbcfile.cpp  dbcfile.h
src/ascnhalf-shared/Network/: CircularBuffer.cpp  CircularBuffer.h  ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketPoll.h  ListenSocketSelect.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrPoll.cpp  SocketMgrPoll.h  SocketMgrSelect.cpp  SocketMgrSelect.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOps.h  SocketOpsFreeBSD.cpp  SocketOpsLinux.cpp  SocketOpsPoll.cpp  SocketOpsSelect.cpp  SocketOpsWin32.cpp  SocketPoll.cpp  SocketSelect.cpp  SocketWin32.cpp
src/ascnhalf-shared/Network-New/: BaseBuffer.h  BaseSocket.h  CircularBuffer.h  ListenSocket.h  Network.h  SocketEngine.cpp  SocketEngine.h  SocketEngine_epoll.cpp  SocketEngine_epoll.h  SocketEngine_iocp.cpp  SocketEngine_iocp.h  SocketEngine_kqueue.cpp  SocketEngine_kqueue.h  SocketEngine_poll.cpp  SocketEngine_poll.h  SocketEngine_select.cpp  SocketEngine_select.h  StraightBuffer.h  TcpSocket.cpp  TcpSocket.h
src/ascnhalf-shared/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
src/ascnhalf-voicechat/: Makefile.am  ascnhalf_opcodes.h  ascnhalf_packet.h  ascnhalf_socket.c  common.h  configfile.c  configfile.h  launcher.c  linkedlist.h  log.c  log.h  mutex.c  mutex.h  network.h  network_handlers.c  network_handlers.h  network_unixepoll.c  network_unixkqueue.c  network_unixselect.c  network_win32.c  voice_channel.c  voice_channel.h  voice_channelmgr.h  voice_socket.c
src/ascnhalf-world/: AIInterface.cpp  AIInterface.h  AQueryMgr.cpp  AQueryMgr.h  AchievementInterface.cpp  AchievementInterface.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BaseConsole.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CConsole.cpp  CConsole.h  CMakeLists.txt  CellHandler.h  ChainAggroEntity.cpp  ChainAggroEntity.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  (+182 more)
(+274 files in other folders)
