SET(ascnhalf_world_SCRS
    AchievementInterface.cpp
    AchievementInterface.h
    AddonMgr.cpp
    AddonMgr.h
    AIInterface.cpp
    AIInterface.h
    AlteracValley.cpp
    AlteracValley.h
#    AQueryMgr.cpp
#    AQueryMgr.h
    ArathiBasin.cpp
    ArathiBasin.h
    AreaTrigger.cpp
    AreaTrigger.h
    Arenas.cpp
    Arenas.h
    ArenaTeam.cpp
    ArenaTeam.h
    AuctionHouse.cpp
    AuctionHouse.h
    AuctionMgr.cpp
    AuctionMgr.h
    BaseConsole.h
    BattlegroundCommands.cpp
    BattlegroundHandler.cpp
    BattlegroundMgr.cpp
    BattlegroundMgr.h
    CConsole.cpp
    CConsole.h
    CellHandler.h
    ChainAggroEntity.cpp
    ChainAggroEntity.h
    Channel.cpp
    Channel.h
    ChannelHandler.cpp
    ChannelMgr.h
    CharacterHandler.cpp
    Chat.cpp
    Chat.h
    ChatHandler.cpp
    ClassSpells.h
    ClusterInterface.cpp
    ClusterInterface.h
    CMakeLists.txt
    CollideInterface.cpp
    CollideInterface.h
    CombatHandler.cpp
    ConsoleCommands.cpp
    ConsoleCommands.h
    ConsoleListener.cpp
    Const.h
    Container.cpp
    Container.h
    Corpse.cpp
    Corpse.h
    Creature.cpp
    Creature.h
    DayWatcherThread.cpp
    DayWatcherThread.h
    DBCEnums.h
    debugcmds.cpp
    DuelHandler.cpp
    DynamicObject.cpp
    DynamicObject.h
    EventableObject.cpp
    EventableObject.h
    EventMgr.cpp
    EventMgr.h
    EyeOfTheStorm.cpp
    EyeOfTheStorm.h
    faction.cpp
    faction.h
    GameObject.cpp
    GameObject.h
    GMTicket.cpp
    Group.cpp
    Group.h
    GroupHandler.cpp
    Guild.cpp
    Guild.h
    GuildHandler.cpp
    HonorHandler.cpp
    HonorHandler.h
    INGEvents.cpp
    IsleOfConquest.cpp
    IsleOfConquest.h
    Item.cpp
    Item.h
    ItemHandler.cpp
    ItemInterface.cpp
    ItemInterface.h
    ItemPrototype.h
    Level0.cpp
    Level1.cpp
    Level2.cpp
    Level3.cpp
    LfgHandler.cpp
    LfgMgr.cpp
    LfgMgr.h
    LocalizationMgr.cpp
    LocalizationMgr.h
    LogonCommClient.cpp
    LogonCommClient.h
    LogonCommHandler.cpp
    LogonCommHandler.h
    LootMgr.cpp
    LootMgr.h
    MailSystem.cpp
    MailSystem.h
    Main.cpp
    MainServerDefines.h
    MapCell.cpp
    MapCell.h
    Map.cpp
    Map.h
    MapMgr.cpp
    MapMgr.h
    MapScriptInterface.cpp
    MapScriptInterface.h
    Master.cpp
    Master.h
    MiscHandler.cpp
    MiscHandler.h
    MovementHandler.cpp
    NameTables.h
    NPCHandler.cpp
    NPCHandler.h
    Object.cpp
    ObjectDefines.h
    Object.h
    ObjectMgr.cpp
    ObjectMgr.h
    ObjectStorage.cpp
    ObjectStorage.h
    Opcodes.cpp
    Opcodes.h
    Packets.h
    Pet.cpp
    Pet.h
    PetHandler.cpp
    Player.cpp
    Player.h
    PlayerPacketWrapper.cpp
    QueryHandler.cpp
    QuestCommands.cpp
    Quest.cpp
    Quest.h
    QuestHandler.cpp
    QuestMgr.cpp
    QuestMgr.h
    RaidHandler.cpp
    RecallCommands.cpp
    ReputationHandler.cpp
    ScriptMgr.cpp
    ScriptMgr.h
    ScriptSetup.h
    SharedDefines.h
    Skill.h
    SkillHandler.cpp
    SkillNameMgr.h
    SocialHandler.cpp
    SpellAuraDefines.h
    SpellAuras.cpp
    SpellAuras.h
    Spell.cpp
    SpellEffects.cpp
    SpellFailure.h
    SpellFixes.cpp
    Spell.h
    SpellHandler.cpp
    SpellNameHashes.h
    SpellTarget.cpp
    Stats.cpp
    Stats.h
    StdAfx.cpp
    StdAfx.h
    StrandOfTheAncients.cpp
    StrandOfTheAncients.h
    TaxiHandler.cpp
    TaxiMgr.cpp
    TaxiMgr.h
    TerrainMgr.cpp
    TerrainMgr.h
    TradeHandler.cpp
    TransporterHandler.cpp
    TransporterHandler.h
    Unit.cpp
    Unit.h
    UpdateFields.h
    UpdateMask.h
    Vehicle.cpp
    Vehicle.h
    VoiceChatClientSocket.cpp
    VoiceChatClientSocket.h
    VoiceChatHandler.cpp
    VoiceChatHandler.h
    WarsongGulch.cpp
    WarsongGulch.h
    WayPoints.cpp
    WeatherMgr.cpp
    WeatherMgr.h
    WordFilter.cpp
    WordFilter.h
    WorkdSocketCluster.cpp
    WorkerServerClient.cpp
    WorkerServerClient.h
    World.cpp
    WorldCreator.cpp
    WorldCreator.h
    World.h
    WorldRunnable.cpp
    WorldRunnable.h
    WorldSession.cpp
    WorldSession.h
    WorldSocket.cpp
    WorldSocket.h
    WorldStateManager.cpp
    WorldStateManager.h
    WorldStates.h

)

add_executable(ascnhalf_world ${ascnhalf_world_SCRS})

target_link_libraries(
    ascnhalf_world
    shared
    pcre
    ${SSLLIB}
    ${MYSQL_LIBRARIES}
    ${POSTGRESQL_LIBRARIES}
)

install(TARGETS ascnhalf_world DESTINATION bin)
