INCLUDES = -I$(top_srcdir)/src/ascnhalf-logonserver \
   -I$(top_srcdir)/src/ascnhalf-realmserver -I$(top_srcdir)/src/ascnhalf-shared -I$(top_srcdir)/src/ascnhalf-voicechat \
   -I$(top_srcdir)/src/ascnhalf-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src
INCLUDES += -I$(srcdir)/../../../ascnhalf-shared/g3dlite -I$(srcdir)/../../../ascnhalf-shared/vmap

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libGossipScripts.la

libGossipScripts_la_SOURCES = \
Gossip_Battlemaster.cpp \
Gossip_Innkeepers.cpp \
Gossip_Trainer.cpp \
Gossip_Mulgore.cpp \
Gossip_Shattrath.cpp \
Gossip_Tanaris.cpp \
Gossip_Stormwind.cpp \
Gossip_Moonglade.cpp \
Gossip_DarkmoonFaire.cpp \
Gossip_Theramore.cpp \
Gossip_Teldrassil.cpp \
Gossip_BoreanTundra.cpp \
Gossip_WyrmrestTemple.cpp \
Gossip_StrandOfTheAncients.cpp \
GossipGuards/SetupStormwind_Guard.cpp \
GossipGuards/Goldshire_Guard.cpp \
GossipGuards/Darnassus_Guard.cpp \
GossipGuards/Teldrassil_Guard.cpp \
GossipGuards/Bloodhoof_Guard.cpp \
GossipGuards/RazorHill_Guard.cpp \
GossipGuards/Brill_Guard.cpp \
GossipGuards/Ironforge_Guard.cpp \
GossipGuards/Kharanos_Guard.cpp \
GossipGuards/Falconwing_Guard.cpp \
GossipGuards/AzureWatch_Guard.cpp \
GossipGuards/Undercity_Guard.cpp \
GossipGuards/Silvermoon_Guard.cpp \
GossipGuards/Exodar_Guard.cpp \
GossipGuards/Orgrimmar_Guard.cpp \
GossipGuards/Thunderbluff_Guard.cpp \
GossipGuards/Shattrath_Guard.cpp \
GossipGuards/Dalaran_Guard.cpp \
GossipGuards/Underbelly_Guard.cpp \
GossipGuards/Guards.h \
Setup.cpp
